updating with stop-gap edits

--- a/newsite2018/css/freelancer.css
+++ b/newsite2018/css/freelancer.css
@@ -289,7 +289,9 @@ a {
   color: #F34737 !important; }
 
 .text-secondary {
-  color: #F27F56 !important; }
+  color: #F27F56 !important;
+  font-size: .85rem;
+   }
 
 .lead {
   font-size: .75rem;
